--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 # Komalpreet.github.io
 
 <h1> Ms. Kaur's website!!1 yahhhh!!!!!!! </h1>
+
+<h2> Hey my name is Komalpreet and I love horsey's, especially Brown and black ones!  Not racist at all. </h2>
