--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 # Komalpreet.github.io
 
-<h1> Ms. Kaur's website!!1 yahhhh!!!!!!! </h1>
-
-<h2> Hey my name is Komalpreet and I love horsey's, especially Brown and black ones!  Not racist at all. </h2>
+<h1> Welcome to Keeping up with Komalpreet </h1>
