--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <h1> Welcome to Dream Interpretation </h1>
 
-		
+				<img src="http://cdn2.hubspot.net/hub/424508/hubfs/shutterstock_204614026.jpg" />
 
-		http://cdn2.hubspot.net/hub/424508/hubfs/shutterstock_204614026.jpg?t=1461777112635&width=550
+
