--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <h1> Welcome to Dream Interpretation </h1>
 
 				<img src="http://cdn2.hubspot.net/hub/424508/hubfs/shutterstock_204614026.jpg" />
-
+<img src="http://img2.goodfon.su/wallpaper/middle/3/91/utro-nebo-peyzazh.jpg"/>
 
