--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
 
 
 <h1> Sometimes people like to share their dreams with others, however they have no one to respond to them.</h1>
+
+
+<h1 style="color: burgundy; font-size:20px"> How this website works </h1>
