--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 <h1> Sometimes people like to share their dreams with others, however they have no one to respond to them.</h1>
 
 
-<h1 style="color: violet; font-size:20px"> How this website works </h1>
+<h1 style="color: violet; font-size:20px"> How this website works: </h1>
