--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <h1> Sometimes people like to share their dreams with others, however they have no one to respond to them.</h1>
 
 
-<h1 style="color: violet; font-size:20px"> How this website works: </h1>
+<h1 style="color: violet; font-size:50px"> How this website works: </h1>
 <ul>
 <li> Write down your dream</li>
 <li> Someone could comment on your dream</li>
 <li> You could start a conversation with them and the other person could share their dream with you</li>
+<li> Enjoy </li>
 </ul>
   
   
-<a href="https://www.google.com/search?safe=strict&hl=en&site=imghp&tbm=isch&source=hp&biw=1164&bih=572&q=dream+interpretation&oq=dream+interpretation&gs_l=img.3...24.13222.0.13670.0.0.0.0.0.0.0.0..0.0....0...1ac.1.64.img..0.0.0.kByjFtoFV1I#imgdii=Q_O_ji0yccmhhM%3A%3BQ_O_ji0yccmhhM%3A%3B988oBSbsyzgzHM%3A&imgrc=Q_O_ji0yccmhhM%3A"></a>
 
