--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 
-<h1 style="color: teal"> Welcome to Dream Interpretation </h1>
+<h1 style="color: teal; text-align:center:> Welcome to Dream Interpretation </h1>
 
 <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" />				
 
-<img src="https://lh3.googleusercontent.com/proxy/sz0DKfVpHqTLld-qk3Lp4YZTSu6I-hzm4p4aiMXKCiEU6DIstqroa-rHc6HkXQT54RinQYTUJmYO_30nvYgbOjmkdU0XPzVd2dQF74dlaVj9V5KnINqF-xNYH_DVXG6p70uzhIAgtE4=w426-h284"/>
+<img src="http://1.bp.blogspot.com/-m8tVgp9xC0s/Ty6hG5ViFXI/AAAAAAAAAlY/hOG2kK1inck/s1600/Lovingly+-+Clouds+with+heart+shape.jpg"/>
 
 
 <h1> You could share your dream with other people and have them respond to it.</h1>
@@ -27,4 +27,4 @@
 
 <a href="https://www.google.com/search?safe=strict&hl=en&site=imghp&tbm=isch&source=hp&biw=1164&bih=572&q=dream+interpretation&oq=dream+interpretation&gs_l=img.3...24.13222.0.13670.0.0.0.0.0.0.0.0..0.0....0...1ac.1.64.img..0.0.0.kByjFtoFV1I#imgrc=TUs2F5N0S2CiSM%3A"><img src="http://www.al-arabeya.net/images/resizeimagehandlercaewtxo9.jpg"/></a> 
 
- <body style="background-color: lightblue;
+ <body style="background-color: lightblue"/>
