--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" />				
 
-<img src="http://1.bp.blogspot.com/-m8tVgp9xC0s/Ty6hG5ViFXI/AAAAAAAAAlY/hOG2kK1inck/s1600/Lovingly+-+Clouds+with+heart+shape.jpg"/>
-
+<img src="http://img.kb-cdn.com/imgviewer/SzFpVjNoOUdSWWFiNWRrUTNvREVweTJCckFCaTI2TUZ1U3RRc2lzS05wUWRLcnZtQnVHYjk3NWp6NDA1dkpzalc5YngzLzNmYTZaMlBPeTZmODJMSXlCM01oSUpwT2xTcTNydGRZN1FkWmdFUnVxWkhsSHVlR20rdnc0NDZrbWRoSytnREVlb09EV3pZZTNBWC96RkpDNGdsRXZ6U2JIMVFiNW9NK25qNC84SlZXT1VXVjhOUnFHZWc1eGNUNmF3?square=0"/>
 
 <h1> You could share your dream with other people and have them respond to it.</h1>
 
