--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<h1 style="color: teal; text-align:center:> Welcome to Dream Interpretation </h1>
+<h1 style="text-align:center:> Welcome to Dream Interpretation"</h1>
 
 <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" />				
 
