--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<h1  Welcome to Dream Interpretation"</h1>
+<h1>  Welcome to Dream Interpretation</h1>
 
 <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" />				
 
@@ -26,4 +26,4 @@
 
 <a href="https://www.google.com/search?safe=strict&hl=en&site=imghp&tbm=isch&source=hp&biw=1164&bih=572&q=dream+interpretation&oq=dream+interpretation&gs_l=img.3...24.13222.0.13670.0.0.0.0.0.0.0.0..0.0....0...1ac.1.64.img..0.0.0.kByjFtoFV1I#imgrc=TUs2F5N0S2CiSM%3A"><img src="http://www.al-arabeya.net/images/resizeimagehandlercaewtxo9.jpg"/></a> 
 
- <body style="background-color: lightblue"/>
+ <body style="background-color: lavender"/>
