--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <h1 style="color: violet; font-size:30px"> How this website works: </h1>
 <ul>
-<li> Write down your dream</li>
-<li> Someone could comment on your dream</li>
-<li> You could start a conversation with them and the other person could share their dream with you</li>
-<li> Enjoy </li>
+<li style="font-size:25px"> Write down your dream</li>
+<li style="font-size:25px"> Someone could comment on your dream</li>
+<li style="font-size:25px"> You could start a conversation with them and the other person could share their dream with you</li>
+<li style="font-size:25px"> Enjoy </li>
 </ul>
   
   
