--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1 style="text-align:center; font-family: Cursive">  Welcome to Dream Interpretation</h1>
 
-<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" height="250" width="100" />				
+<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRrHLiluEeNn2GQwe5WAIDochFIZRp3NfW2lpGfCgp98V42IhW8zA" />				
 
 <img src="https://s-media-cache-ak0.pinimg.com/236x/60/ee/d6/60eed649ae242d73651a6607595ae0e1.jpg"/>
 
